--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="menu">
                 <li class="current"><a href="index.html">Home</a></li>
                 <li><a href="features.html">Features</a></li>
-                <li><a href="docs.html">About Us</a></li>
+                <li><a href="docs.html">About</a></li>
             </ul>
         </nav>
     </div>
@@ -148,10 +148,10 @@
 
             </div>
             <div>
-               <a href="#"><i class="fab fa-twitter fa-2x"></i>       </a>     
-               <a href="#"><i class="fab fa-facebook fa-2x"></i></a> 
-                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-               <a href="#"><i class="fab fa-linkedin fa-2x"></i></a> 
+               <a href="#" class="social-icon"><i class="fab fa-twitter fa-2x"></i></a>     
+               <a href="#" class="social-icon"><i class="fab fa-facebook fa-2x"></i></a> 
+               <a href="#" class="social-icon"><i class="fab fa-instagram fa-2x"></i></a>
+               <a href="#" class="social-icon"><i class="fab fa-linkedin fa-2x"></i></a> 
             </div>
         </div>
     </footer>
