--- a/docs.html
+++ b/docs.html
@@ -18,7 +18,7 @@
             <ul class="menu">
                 <li ><a href="index.html">Home</a></li>
                 <li ><a href="features.html">Features</a></li>
-                <li class="current"><a href="docs.html">About Us</a></li>
+                <li class="current"><a href="docs.html">About</a></li>
             </ul>
         </nav>
     </div>
